--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,14 @@ environment:
   sdk: ^3.6.1
 
 dependencies:
+  bloc: ^9.0.0
+  bloc_test: ^10.0.0
+  cloud_firestore: ^5.6.5
+  
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.0
+  go_router: ^14.8.1
   phosphor_flutter: ^2.1.0
 
 dev_dependencies:
