--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,24 @@ dependencies:
   
   flutter:
     sdk: flutter
+
+  # Internal packages
+  
+  core:
+    path: ./packages/core
+
+  firebase_login:
+    path: ./packages/firebase_login
+
+  # External packages
+
   flutter_bloc: ^9.1.0
   go_router: ^14.8.1
   phosphor_flutter: ^2.1.0
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  firebase_core: ^3.12.1
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +39,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
