--- a/packages/remote/pubspec.yaml
+++ b/packages/remote/pubspec.yaml
@@ -1,10 +1,10 @@
-name: firebase_login
-description: "Package that manage firebase login as a service."
+name: remote
+description: "A new Flutter package project."
 version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^3.6.1
+  sdk: ^3.7.0
   flutter: 3.29.0
 
 dependencies:
@@ -16,14 +16,15 @@ dependencies:
   core:
     path: ../core
 
-  #External packages
+  # External packages
   
-  firebase_auth: ^5.5.1
+  firebase_core: ^3.11.0
+  cloud_firestore: ^5.6.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  
+
 flutter:
   uses-material-design: false
