feat: added snackbar and domain package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ version: 0.1.0
 
 environment:
   sdk: ^3.6.1
+  flutter: 3.29.0
 
 dependencies:
   bloc: ^9.0.0
@@ -22,6 +23,9 @@ dependencies:
   firebase_login:
     path: ./packages/firebase_login
 
+  domain:
+    path: ./packages/domain
+
   # External packages
 
   flutter_bloc: ^9.1.0
@@ -31,6 +35,7 @@ dependencies:
     sdk: flutter
   intl: any
   firebase_core: ^3.12.1
+  another_flushbar: ^1.12.30
 
 dev_dependencies:
   flutter_test:
