feat: added tests

--- a/packages/result/pubspec.yaml
+++ b/packages/result/pubspec.yaml
@@ -1,4 +1,4 @@
-name: domain
+name: result
 description: "A new Flutter package project."
 version: 0.0.1
 publish_to: none
@@ -10,22 +10,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # Internal packages
-
-  core:
-    path: ../core
-
-  remote:
-    path: ../remote
-
-  result:
-    path: ../result
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  
+
 flutter:
   uses-material-design: false
