--- a/packages/domain/pubspec.yaml
+++ b/packages/domain/pubspec.yaml
@@ -4,8 +4,8 @@ version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: ^3.7.0
-  flutter: ">=1.17.0"
+  sdk: ^3.6.1
+  flutter: 3.29.0
 
 dependencies:
   flutter:
@@ -18,6 +18,9 @@ dependencies:
 
   remote:
     path: ../remote
+
+  local:
+    path: ../local
 
   result:
     path: ../result
