--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   intl: any
   firebase_core: ^3.12.1
   another_flushbar: ^1.12.30
+  flutter_sound: ^9.25.4
+  permission_handler: ^11.4.0
+  clock: ^1.1.2
 
 dev_dependencies:
   flutter_test:
