--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,6 +49,8 @@
 	<array>
 			<string>audio</string>
 	</array>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>MyApp uses speech recognition to convert your speech to text.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>MyApp uses the microphone to record your speech and convert it to text.</string>
 </dict>
